Bug fix
Fix for horizontal scroll bug and photo page sidebar height

--- a/style-newgreen.css
+++ b/style-newgreen.css
@@ -7327,7 +7327,6 @@ body {
 }
 .container.full, .container.full .span12 {
 	width:100%;
-	margin-left: 0px;
 }
 .delimiter { clear: both; }
 #headergreen {
@@ -7360,7 +7359,6 @@ body {
 	/*z-index: 500;
 	float: left;*/
 	background: rgba(173, 199, 67, 1);
-	/*background: #59ab2f;*/
 }
 .icon-home.green {
 	color: #6da77c;
@@ -7730,7 +7728,6 @@ ul.menu.pdf li a:hover {
 
 .span3.green {
 	background: rgba(173, 199, 67, 1);
-	/*background: #59ab2f;*/
 }
 .left_sidebar {
     color: #ffffff;
@@ -8415,7 +8412,6 @@ ul.sitemap li {width: 50%; float: left;}
 	}
 	.container.full .span12 {
 		width: 100%;
-		margin-left: 0px;
 	}
 	.span3 {
 		width: 200px;
